<resources>
	<string name="app_name">SpectraOs</string>
	<string name="wifi_remembered">Saved</string>
	<string name="isconnected">(Connected)</string>
	<string name="wifi_disabled_password_failure">Problem with authentication</string>
	<string name="wifi_disabled_network_failure">IP configuration failed</string>
	<string name="wifi_disabled_generic">Deactivated</string>
	<string name="strong">Strong</string>
	<string name="general">General</string>
	<string name="weak">Weak</string>
	<string name="signalstrength">Signal strength:</string>
	<string name="security">Security:</string>
	<string name="stateinfo">Status information:</string>
	<string name="wifiipaddress">IP address:</string>
	<string name="wifistate">Connected</string>
	<string name="forget">Forget</string>
	<string name="link">Connect</string>
	<string name="stop">Disconnect</string>
	<string name="wifi_ssid">Network SSID</string>
	<string name="wifi_security">Security</string>
	<string name="wifi_password">Password</string>
	<string name="wifi_show_password">Display password</string>
	<string name="wpa_psk">WPA_PSK</string>
	<string name="wpa2_psk">WPA2_PSK</string>
	<string name="wpa_eap">WPA_EAP</string>
	<string name="wep">WEP</string>
	<string name="ssidmsg">Network SSID cannot be empty!</string>
	<string name="passwordmsg">Password cannot be empty!</string>
	<string name="none">None</string>
	<string name="passwordmessage">Sorry, the password you entered is too short. Please try again!</string>
	<string name="enter">OK</string>
	<string name="cancel">Cancel</string>
	<string name="hide_password">Hide password</string>
	<string name="isconnect">The WiFi you have selected does not have a password and may not be secure. Are you sure you want to connect?</string>
	<string name="Authentication_error">Current connection WiFi authentication error, connection failed</string>
	<string name="pairing">Pairing</string>
	<string name="paired">Paired</string>
	<string name="unpaired">Unpair</string>
	<string name="connecting">Connecting</string>
	<string name="connected">Connected</string>
	<string name="disconnected">Disconnect</string>
	<string name="not_connected">Not connected</string>
	<string name="disconnecting">Disconnecting</string>
	<string name="developer_open_hint">Developer mode is turned on</string>
	<string name="memory_info">%1$s (available)/%2$s (total)</string>
	<string name="reset_keystore">Do you want to reset the correction screen</string>
	<string name="day_am">AM</string>
	<string name="day_pm">PM</string>
	<string name="hour12">1:00 PM</string>
	<string name="hour24">13:00</string>
	<string name="auto_time_hint">Auto time is in use and cannot be manually modified</string>
	<string name="fine_minutes">Five minutes</string>
	<string name="ten_minutes">Ten minutes</string>
	<string name="twenty_minutes">Twenty minutes</string>
	<string name="an_hour">An hour</string>
	<string name="off">Off</string>
	<string name="reset_factory_msg">Initialize user operations, application settings, and system settings, etc.</string>
	<string name="short_max_tips">Quick app is full</string>
	<string name="about_device">About devices</string>
	<string name="device_model">Equipment model</string>
	<string name="ui_version">UI version</string>
	<string name="android_version">Android version</string>
	<string name="memory">Running memory</string>
	<string name="storage">Storage space</string>
	<string name="wired_mac">Wired MAC</string>
	<string name="wireless_mac">Wireless MAC</string>
	<string name="update_firmware">Local upgrade</string>
	<string name="all_apps">All Apps</string>
	<string name="app_manager_settings">Application Settings</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="bluetooth_switch">BT Switch</string>
	<string name="search_bluetooth">Search for Bluetooth devices</string>
	<string name="paired_devices">Paired devices</string>
	<string name="available_devices">Available devices</string>
	<string name="date_time_settings">Time and date settings</string>
	<string name="auto_time">Auto time</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="timezone">Time zone</string>
	<string name="time_format">Use 24-hour format</string>
	<string name="language_keyboard">Language and keyboard</string>
	<string name="language_setting">Language settings</string>
	<string name="inputmethod">Input Method</string>
	<string name="inputmethod_setting">Input Method Settings</string>
	<string name="shortcut_editor">Shortcut editing</string>
	<string name="wallpaper_setting">Wallpaper settings</string>
	<string name="usb">USB</string>
	<string name="av">AV</string>
	<string name="hdmi">HDMI</string>
	<string name="hdmi2">HDMI2</string>
	<string name="vga">VGA</string>
	<string name="apps">My Apps</string>
	<string name="google">Store</string>
	<string name="settings">Settings</string>
	<string name="project_setting">Projection settings</string>
	<string name="wireless_network">Wireless network</string>
	<string name="apps_manager">Application Management</string>
	<string name="date_time">Date and time</string>
	<string name="other_settings">Other settings</string>
	<string name="system_info">System information</string>
	<string name="boot_input">External input during startup</string>
	<string name="boot_apps">Start the application after booting up</string>
	<string name="power_mode">Power mode</string>
	<string name="button_sound">Button sound</string>
	<string name="screen_saver">Screen saver</string>
	<string name="timer_off">Timed shutdown</string>
	<string name="reset_factory">Restore factory settings</string>
	<string name="project_mode">Installation mode</string>
	<string name="digital_zoom">Digital scaling</string>
	<string name="vertical_correct">Vertical correction</string>
	<string name="horizontal_correct">Horizontal correction</string>
	<string name="manual_keystone">Manual trapezoidal</string>
	<string name="reset_keystone">Reset trapezoidal correction</string>
	<string name="wifi">WI-FI</string>
	<string name="wifi_switch">WI-FI switch</string>
	<string name="apps_version">Application version</string>
	<string name="app_size">Application size</string>
	<string name="app_cache">Caching data</string>
	<string name="clear_cache">Clear cache</string>
	<string name="uninstall">Uninstall</string>
	<string name="select_date">Select date</string>
	<string name="year">Year</string>
	<string name="month">Month</string>
	<string name="day">Day</string>
	<string name="correct_tips">When the center is a circle, the screen has the best proportion</string>
	<string name="select_point">Selecting points</string>
	<string name="correct">Correct</string>
	<string name="exit">Exit</string>
	<string name="app">APP</string>
	<string name="select_time">Select time</string>
	<string name="hours">Time</string>
	<string name="minute">Minute</string>
	<string name="network_connect">Network connections</string>
	<string name="network_connect_tips">Please enter \"%1$s\" password</string>
	<string name="connect">Connect</string>
	<string name="upgrade_check_fail_tips">The upgrade file was not found. Please check the USB connection or update the file and try again.</string>
	<string name="retry">Retry</string>
	<string name="checking">Searching for files</string>
	<string name="switch_wallpaper_tips">Switching wallpapers, please wait</string>
	<string name="exit_speaker_mode">Exiting Bluetooth audio mode</string>
	<string name="screen_off">Resting screen</string>
	<string name="power_off">Shutdown</string>
	<string name="reboot">Restart</string>
	<string name="bluetooth_speaker">Bluetooth Speaker</string>
	<string name="timer">Timer</string>
	<string name="second">%1$s Second</string>
	<string name="auto_keystone">Auto Trapezoidal Correction</string>
	<string name="auto_keystone_on">Please turn off auto trapezoidal correction first</string>
	<string name="auto_four_corner_on">Please turn off auto corner correction first</string>
	<string name="power_mode_1">Equipment is powered on and in standby</string>
	<string name="power_mode_2">Equipment is powered on and in startup</string>
	<string name="boot_source_1">Nothing</string>
	<string name="boot_source_2">HDMI</string>
	<string name="boot_source_3">AV</string>
	<string name="developer_mode">Developer mode</string>
	<string name="developer_mode_on">Developer mode is turned on</string>
	<string name="developer_mode_off">Developer mode has been turned off</string>
	<string name="off_screen">Press the \"OK\" key to close the screen</string>
	<string name="connect_status">Connection status:</string>
	<string name="exit_tip">Tip: Press the \"Return\" key or the \"Home\" key to exit the screen rest</string>
	<string name="device_name">Device Name</string>
	<string name="online_update">Online upgrade</string>
	<string name="manual">Instructions</string>
	<string name="local">Local</string>
	<string name="usb_dir">USB</string>
	<string name="auto_focus">Auto Focus</string>
	<string name="auto_four_corner">Auto Four Corner Correction</string>
	<string name="screen_recognition">Screen Recognition</string>
	<string name="intelligent_obstacle">Intelligent Obstacle Avoidance</string>
	<string name="calibration">Intelligent Calibration</string>
	<string name="shutdown_tips"><Data><![CDATA[<font color="#ff0000"><b>%1$d</b></font> seconds auto shutdown]]></Data></string>
	<string name="connecting_ssid">connecting %1$s …</string>
	<string name="resident_app">Fixed shortcut application, cannot be deleted</string>
	<string name="data_none">No corresponding application data found</string>
	<string name="network_setting">Network settings</string>
	<string name="hotspot_settings">Hotspot settings</string>
	<string name="wired_network">Wired network</string>
	<string name="hotspot_switch">Hotspot switch</string>
	<string name="one_band">2.4 GHz band</string>
	<string name="two_band">5 GHz band</string>
	<string name="passwordmsglength">The password cannot be less than 8 digits!</string>
	<string name="empty_string">Cannot be set to empty! </string>
	<string name="add_network">Add network</string>
	<string name="dhcp">DHCP</string>
	<string name="static_ip">Static</string>
	<string name="ip_settings">IP settings</string>
	<string name="ip_address">IP address</string>
	<string name="subnet_mask">Subnet mask</string>
	<string name="gateway">Gateway</string>
	<string name="dns">DNS</string>
	<string name="dns2">DNS2</string>
	<string name="mac_address">MAC address</string>
	<string name="network_prefix_length">Network prefix length</string>
	<string name="serial_number">Serial number</string>
	<string name="resolution">Resolution</string>
	<string name="display_settings">Display settings</string>
	<string name="brightness">Brightness</string>
	<string name="picture_mode_standard_name">Standard</string>
	<string name="picture_mode_cinema_name">Cinema</string>
 <string name="picture_mode_vivid_name">Bright</string>
 <string name="picture_mode_sports_name">Sports</string>
 <string name="picture_mode_game_name">Game</string>
	<string name="follow_me">Follow the following steps:</string>
	<string name="init_angle_tip1">1. Place the machine horizontally on the desktop, with the screen perpendicular to the wall or curtain. </string>
	<string name="init_angle_tip2">2. Adjust the machine\'s up and down angles to ensure that the projected screen is a standard rectangle. </string>
	<string name="init_angle_tip3">3. Click Start.</string>
	<string name="start">Start</string>
	<string name="accout_delete">Remove this account?</string>
	<string name="set_boot_password">Set Boot Password</string>
	<string name="password_length_limit">Password must be at least 4 characters</string>
	<string name="password_attention">Note: Forgotten password requires a factory reset. Please keep it safe!</string>
	<string name="new_password">Enter New Password</string>
	<string name="new_password_repeate">Re-enter New Password</string>
</resources>