<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_main"
    android:orientation="vertical"
    android:background="@drawable/background_other">

    <LinearLayout
        android:layout_width="@dimen/x_850"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/x_180"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_settings_bg"
        android:padding="@dimen/x_30"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/follow_me"
            android:layout_width="@dimen/x_850"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/follow_me"
            android:textStyle="bold"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="@dimen/x_25"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/x_10"
            android:text="@string/init_angle_tip1"
            android:textSize="@dimen/x_25"
            android:textStyle="bold"
            android:maxLines="5"
            android:gravity="start" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/x_10"
            android:text="@string/init_angle_tip2"
            android:textSize="@dimen/x_25"
            android:textStyle="bold"
            android:maxLines="5"
            android:gravity="start" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/x_10"
            android:text="@string/init_angle_tip3"
            android:textSize="@dimen/x_25"
            android:textStyle="bold"
            android:ellipsize="marquee"
            android:maxLines="3"
            android:gravity="start" />
    </LinearLayout>

    <TextView
        android:id="@+id/start_init_angle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y_70"
        android:minWidth="@dimen/x_150"
        android:text="@string/start"
        style="@style/focusStyle"
        android:textSize="@dimen/x_25"
        android:layout_marginTop="@dimen/x_50"
        android:layout_gravity="center_horizontal"
        android:textColor="#D9000000"
        android:background="@drawable/init_angle_bg"
        android:paddingStart="@dimen/x_20"
        android:paddingEnd="@dimen/x_20"
        android:gravity="center"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textStyle="bold">

    </TextView>

</LinearLayout>