<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x_550"
    android:layout_height="@dimen/y_300"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:background="@drawable/white_frame"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_title"
        android:textColor="@color/black"
        android:textSize="@dimen/x_26"
        android:text="@string/reset_factory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y_30"
        
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_title"
        android:layout_marginTop="@dimen/y_30"
        android:layout_marginStart="@dimen/x_80"
        android:layout_marginEnd="@dimen/y_80"
        android:textColor="@color/black"
        android:textSize="@dimen/x_21"
        android:text="@string/reset_factory_msg"
        
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y_50"
        android:id="@+id/enter"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_16"
        android:layout_marginStart="@dimen/x_50"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/enter"
        android:textSize="@dimen/x_25"
        android:minWidth="@dimen/x_120"
        android:paddingStart="@dimen/x_5"
        android:paddingEnd="@dimen/x_5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y_50"
        android:id="@+id/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/y_16"
        android:layout_marginEnd="@dimen/x_50"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textSize="@dimen/x_25"
        android:minWidth="@dimen/x_120"
        android:paddingStart="@dimen/x_5"
        android:paddingEnd="@dimen/x_5"
        />

</RelativeLayout>