<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background8">

    <TextView
        android:id="@+id/title1"
        android:layout_width="@dimen/x_533"
        android:layout_height="wrap_content"
        android:textSize="@dimen/y_35"
        android:layout_marginTop="@dimen/y_120"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/set_boot_password">

    </TextView>

    <TextView
        android:id="@+id/title2"
        android:layout_below="@+id/title1"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/y_20"
        android:layout_marginTop="@dimen/y_20"
        android:textColor="#ff0000"
        android:text="@string/password_length_limit"
        android:gravity="center"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_width="@dimen/x_533"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/title3"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/y_20"
        android:textColor="#ff0000"
        android:gravity="center"
        android:layout_marginBottom="@dimen/y_20"
        android:text="@string/password_attention"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_width="@dimen/x_533"
        android:layout_height="wrap_content">

    </TextView>


    <EditText
        android:id="@+id/Password1"
        android:hint="@string/new_password"
        style="@style/focusStyle"
        android:layout_below="@+id/title1"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/password_bg"
        android:gravity="center"
        android:textSize="@dimen/x_26"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="@dimen/y_93"
        android:layout_width="@dimen/x_533"
        android:layout_height="@dimen/y_80"/>

    <RelativeLayout
        android:id="@+id/rl_eye1"
        android:layout_below="@+id/title1"
        style="@style/focusStyle"
        android:background="@drawable/password_bg2"
        android:layout_toEndOf="@+id/Password1"
        android:layout_marginStart="@dimen/x_20"
        android:layout_marginTop="@dimen/y_93"
        android:layout_width="@dimen/x_80"
        android:layout_height="@dimen/y_80">

        <ImageView
            android:id="@+id/eye1"
            android:src="@drawable/password_eye_off"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/x_40"
            android:layout_height="@dimen/y_40">

        </ImageView>

    </RelativeLayout>


    <EditText
        android:id="@+id/Password2"
        android:hint="@string/new_password_repeate"
        style="@style/focusStyle"
        android:layout_below="@+id/Password1"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/password_bg"
        android:textSize="@dimen/x_26"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/x_533"
        android:layout_height="@dimen/y_80"
        android:layout_marginTop="@dimen/y_20"/>

    <RelativeLayout
        android:id="@+id/rl_eye2"
        style="@style/focusStyle"
        android:layout_below="@+id/Password1"
        android:layout_toEndOf="@+id/Password2"
        android:background="@drawable/password_bg2"
        android:layout_marginStart="@dimen/x_20"
        android:layout_marginTop="@dimen/y_20"
        android:layout_width="@dimen/x_80"
        android:layout_height="@dimen/y_80">

        <ImageView
            android:id="@+id/eye2"
            android:src="@drawable/password_eye_off"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/x_40"
            android:layout_height="@dimen/y_40">

        </ImageView>

    </RelativeLayout>

    <TextView
        android:id="@+id/enter"
        style="@style/focusStyle"
        android:layout_width="@dimen/x_200"
        android:layout_height="@dimen/y_80"
        android:layout_marginStart="@dimen/x_373"
        android:layout_marginTop="@dimen/y_33"
        android:textSize="@dimen/y_26"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/enter"
        android:enabled="false"
        android:background="@drawable/password_bg2"
        android:layout_below="@+id/Password2">

    </TextView>

    <TextView
        android:id="@+id/cancel"
        style="@style/focusStyle"
        android:layout_width="@dimen/x_200"
        android:layout_height="@dimen/y_80"
        android:layout_marginStart="@dimen/x_134"
        android:layout_marginTop="@dimen/y_33"
        android:textSize="@dimen/y_26"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_below="@+id/Password2"
        android:background="@drawable/password_bg2"
        android:layout_toEndOf="@+id/enter">

    </TextView>

</RelativeLayout>
