<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <View
        android:layout_width="@dimen/x_300"
        android:layout_height="@dimen/y_300"
        android:background="@drawable/speaker_mode"
        android:layout_marginStart="@dimen/x_100"
        android:layout_centerVertical="true"
        />

    <TextView
        android:layout_width="@dimen/x_400"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/y_50"
        android:id="@+id/off_screen"
        android:background="@drawable/tv_button_bg"
        android:text="@string/off_screen"
        android:textSize="@dimen/x_23"
        android:textColor="@color/white"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="@dimen/x_700"
        android:layout_marginTop="@dimen/y_430"
        />
    <TextView
        android:layout_width="@dimen/x_400"
        android:layout_height="wrap_content"
        android:id="@+id/tips"
        android:layout_marginStart="@dimen/x_700"
        android:layout_below="@id/off_screen"
        android:layout_marginTop="@dimen/y_15"
        android:textColor="@color/black"
        android:textSize="@dimen/x_23"
        android:text="@string/exit_tip"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rl_device_name"
        android:layout_marginTop="@dimen/y_250"
        android:layout_marginStart="@dimen/x_700"
        >

        <TextView
            android:id="@+id/device_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textColor="@color/black"
            android:textSize="@dimen/x_30" />

        <TextView
            android:id="@+id/device_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/x_15"
            android:layout_toEndOf="@id/device_name_title"
            android:textColor="@color/black"
            android:textSize="@dimen/x_30" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_device_name"
        android:layout_marginTop="@dimen/y_10"
        android:layout_marginStart="@dimen/x_700"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/connect_status"
            android:textColor="@color/black"
            android:textSize="@dimen/x_30"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/x_15"
            android:layout_toEndOf="@id/title"
            android:text="@string/not_connected"
            android:textColor="@color/black"
            android:textSize="@dimen/x_30"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>