<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x_600"
    android:layout_height="@dimen/y_400"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:background="@drawable/white_frame"
    skin:enable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y_30"
        android:textColor="@color/black"
        android:textSize="@dimen/x_27"
        android:text="@string/select_time"
        skin:enable="true"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        >

        <com.htc.spectraos.widget.TextConfigNumberPicker
            android:id="@+id/np_hour"
            android:layout_width="@dimen/x_80"
            android:layout_height="@dimen/y_180"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/picker_bg"
            android:nextFocusLeft="@id/enter"
            skin:enable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/hours"
            android:textSize="@dimen/x_23"
            android:textColor="@color/black"
            skin:enable="true"
            />

        <com.htc.spectraos.widget.TextConfigNumberPicker
            android:id="@+id/np_minute"
            android:layout_width="@dimen/x_80"
            android:layout_height="@dimen/y_180"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/picker_bg"
            android:nextFocusRight="@id/cancel"
            skin:enable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/minute"
            android:textSize="@dimen/x_23"
            android:textColor="@color/black"
            skin:enable="true"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y_50"
        android:id="@+id/enter"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y_16"
        android:layout_marginStart="@dimen/x_50"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/enter"
        android:textSize="@dimen/x_25"
        skin:enable="true"
        android:minWidth="@dimen/x_120"
        android:paddingStart="@dimen/x_5"
        android:paddingEnd="@dimen/x_5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y_50"
        android:id="@+id/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/y_16"
        android:layout_marginEnd="@dimen/x_50"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textSize="@dimen/x_25"
        skin:enable="true"
        android:minWidth="@dimen/x_120"
        android:paddingStart="@dimen/x_5"
        android:paddingEnd="@dimen/x_5"
        />

</RelativeLayout>